src/test/deca/context/valid/expressions/modulo.deca
// Description:
//    Test de modulo
//
// Resultats:
//    Ok
//
// Historique:
//    cree le 17/01/2022

{
        1 % 1;
}
