src/test/deca/context/invalid/expressions/false_boolean_or.deca
// Description:
//    Test des operateur binaire avec des types no binaire
//
// Resultats:
//    context: erreur de type int et bool`
//
// Historique:
//    cree le 13/01/2022

{
    true || 1;
}